Formatted status display. Set min-height for input-wrappers in calendar section, to avoid jumping on big displays

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,7 @@ input[type=radio] {
 
 #calendar-section .input-wrapper {
     background-color: rgba(0,0,0,0.1);
+    min-height: 380px;
 }
 
 .btn {
@@ -205,6 +206,15 @@ input[type=radio] {
 .btn:hover {
     background-color: #A69D91;
     color: #fff;
+}
+
+#status-wrapper {
+    display: none;
+}
+
+#status-wrapper p {
+    text-align: center;
+    color: #333;
 }
 
 hr {
